--- a/TwitterFollowMap/Base.lproj/Main.storyboard
+++ b/TwitterFollowMap/Base.lproj/Main.storyboard
@@ -1,24 +1,102 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="S4O-rq-9T2">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TwitterFollowMap" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ijz-de-uKt">
+                                <rect key="frame" x="0.0" y="462" width="414" height="400"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TWCellIdentifier" id="8tb-tS-SHZ" customClass="TWTableViewCell" customModule="TwitterFollowMap" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="42.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="8tb-tS-SHZ" id="NdW-kd-SoS">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="42.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hQ8-eg-e6f">
+                                                    <rect key="frame" x="349" y="6" width="44" height="30.5"/>
+                                                    <state key="normal" title="Follow"/>
+                                                    <connections>
+                                                        <action selector="followButton:" destination="8tb-tS-SHZ" eventType="touchUpInside" id="cbj-tt-uKi"/>
+                                                    </connections>
+                                                </button>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="hQ8-eg-e6f" secondAttribute="trailing" constant="1" id="5Bc-af-sKY"/>
+                                                <constraint firstItem="hQ8-eg-e6f" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="NdW-kd-SoS" secondAttribute="leading" constant="20" symbolic="YES" id="89P-LZ-tla"/>
+                                                <constraint firstItem="hQ8-eg-e6f" firstAttribute="top" secondItem="NdW-kd-SoS" secondAttribute="topMargin" constant="-5" id="Onu-Bb-fgX"/>
+                                                <constraint firstItem="hQ8-eg-e6f" firstAttribute="centerY" secondItem="NdW-kd-SoS" secondAttribute="centerY" id="p5p-3z-swv"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="followBtn" destination="hQ8-eg-e6f" id="qvO-TB-nZb"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Z6m-DW-E2j">
+                                <rect key="frame" x="0.0" y="88" width="414" height="366"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="366" id="qPN-6j-iVM"/>
+                                </constraints>
+                            </mapView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Z6m-DW-E2j" firstAttribute="trailing" secondItem="Ijz-de-uKt" secondAttribute="trailing" id="0O9-RS-qlO"/>
+                            <constraint firstItem="Z6m-DW-E2j" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4bt-NG-mBd"/>
+                            <constraint firstItem="Ijz-de-uKt" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Mpe-98-xgJ"/>
+                            <constraint firstItem="Ijz-de-uKt" firstAttribute="top" secondItem="Z6m-DW-E2j" secondAttribute="bottom" constant="8" id="WGL-wq-7yg"/>
+                            <constraint firstItem="Z6m-DW-E2j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="WcX-qQ-9MZ"/>
+                            <constraint firstItem="Z6m-DW-E2j" firstAttribute="leading" secondItem="Ijz-de-uKt" secondAttribute="leading" id="lOt-PW-ENl"/>
+                            <constraint firstItem="Z6m-DW-E2j" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="qfn-zP-05f"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="KYh-IK-199"/>
+                    <connections>
+                        <outlet property="mapView" destination="Z6m-DW-E2j" id="4hS-2L-ul0"/>
+                        <outlet property="twTableView" destination="Ijz-de-uKt" id="hLx-io-KWg"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="-217.39130434782609" y="93.75"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="h2Q-Lr-lua">
+            <objects>
+                <navigationController id="S4O-rq-9T2" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="pVR-2N-hiy">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="ASg-3b-9VM"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="sQW-Tc-l4c" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-796" y="-579"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
