--- a/TwitterFollowMap/Base.lproj/Main.storyboard
+++ b/TwitterFollowMap/Base.lproj/Main.storyboard
@@ -16,8 +16,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Z6m-DW-E2j">
+                                <rect key="frame" x="0.0" y="496" width="414" height="366"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="366" id="SSl-sd-2tr"/>
+                                </constraints>
+                            </mapView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ijz-de-uKt">
-                                <rect key="frame" x="0.0" y="462" width="414" height="400"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="400"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TWCellIdentifier" id="8tb-tS-SHZ" customClass="TWTableViewCell" customModule="TwitterFollowMap" customModuleProvider="target">
@@ -36,10 +42,10 @@
                                                 </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstAttribute="trailingMargin" secondItem="hQ8-eg-e6f" secondAttribute="trailing" constant="1" id="5Bc-af-sKY"/>
-                                                <constraint firstItem="hQ8-eg-e6f" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="NdW-kd-SoS" secondAttribute="leading" constant="20" symbolic="YES" id="89P-LZ-tla"/>
-                                                <constraint firstItem="hQ8-eg-e6f" firstAttribute="top" secondItem="NdW-kd-SoS" secondAttribute="topMargin" constant="-5" id="Onu-Bb-fgX"/>
-                                                <constraint firstItem="hQ8-eg-e6f" firstAttribute="centerY" secondItem="NdW-kd-SoS" secondAttribute="centerY" id="p5p-3z-swv"/>
+                                                <constraint firstItem="hQ8-eg-e6f" firstAttribute="centerY" secondItem="NdW-kd-SoS" secondAttribute="centerY" id="HZ8-aZ-WwS"/>
+                                                <constraint firstItem="hQ8-eg-e6f" firstAttribute="top" secondItem="NdW-kd-SoS" secondAttribute="topMargin" constant="-5" id="cDa-Qh-Jml"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="hQ8-eg-e6f" secondAttribute="trailing" constant="1" id="rSx-eG-nKW"/>
+                                                <constraint firstItem="hQ8-eg-e6f" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="NdW-kd-SoS" secondAttribute="leading" constant="20" symbolic="YES" id="xXk-J6-4ze"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
@@ -48,23 +54,17 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Z6m-DW-E2j">
-                                <rect key="frame" x="0.0" y="88" width="414" height="366"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="366" id="qPN-6j-iVM"/>
-                                </constraints>
-                            </mapView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Z6m-DW-E2j" firstAttribute="trailing" secondItem="Ijz-de-uKt" secondAttribute="trailing" id="0O9-RS-qlO"/>
-                            <constraint firstItem="Z6m-DW-E2j" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="4bt-NG-mBd"/>
-                            <constraint firstItem="Ijz-de-uKt" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Mpe-98-xgJ"/>
-                            <constraint firstItem="Ijz-de-uKt" firstAttribute="top" secondItem="Z6m-DW-E2j" secondAttribute="bottom" constant="8" id="WGL-wq-7yg"/>
-                            <constraint firstItem="Z6m-DW-E2j" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="WcX-qQ-9MZ"/>
-                            <constraint firstItem="Z6m-DW-E2j" firstAttribute="leading" secondItem="Ijz-de-uKt" secondAttribute="leading" id="lOt-PW-ENl"/>
-                            <constraint firstItem="Z6m-DW-E2j" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="qfn-zP-05f"/>
+                            <constraint firstItem="Z6m-DW-E2j" firstAttribute="top" secondItem="Ijz-de-uKt" secondAttribute="bottom" constant="8" symbolic="YES" id="1Xa-QU-DNy"/>
+                            <constraint firstAttribute="trailing" secondItem="Ijz-de-uKt" secondAttribute="trailing" id="7Ln-LK-W2O"/>
+                            <constraint firstItem="Ijz-de-uKt" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="JB6-5h-zkD"/>
+                            <constraint firstItem="Z6m-DW-E2j" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="Jlo-UF-ta6"/>
+                            <constraint firstItem="Ijz-de-uKt" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="gfd-YE-pva"/>
+                            <constraint firstItem="Ijz-de-uKt" firstAttribute="leading" secondItem="Z6m-DW-E2j" secondAttribute="leading" id="nDt-Yv-1ny"/>
+                            <constraint firstItem="Ijz-de-uKt" firstAttribute="trailing" secondItem="Z6m-DW-E2j" secondAttribute="trailing" id="q9t-FM-K9Y"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="KYh-IK-199"/>
